--- a/src/components/login.module.scss
+++ b/src/components/login.module.scss
@@ -48,21 +48,15 @@ span {
             color: chocolate;
          }
 
-         label {
-            margin-bottom: 20px;
-         }
-
          input {
             width: 80%;
             color: chocolate;
             margin-bottom: 20px;
-            height: 30px;
             font-size: 2rem;
-            padding-bottom: 10px;
+            padding-bottom: 5px;
             background: transparent;
             border: none;
             border-bottom: 2px solid #1f1f1f;
-            -webkit-appearance: none;
 
             &:focus {
                outline: 0;
@@ -70,6 +64,11 @@ span {
          }
 
       }
+   }
+
+   .movedLeft {
+      @extend .left; 
+      transform: translateX(-300%);
    }
 
    .btn {
@@ -109,12 +108,18 @@ span {
       animation: show 1s ease;
       margin-right: 100px;
       transition: all 1s;
+      transform: translateX(120%);
 
       .title {
          font-size: 2rem;
          margin-bottom: 15px;
          text-shadow: 5px 5px 10px #000 ;
       }
+   }
+
+   .movedWelcomeText {
+      @extend .welcomeText;
+      transform: translateX(-120%);
    }
 
    .aboutText {
@@ -124,6 +129,7 @@ span {
       padding: 10px 20px;
       font-size: 1.1rem;
       transition: all 1s;
+      transform: translateX(300%);
 
       &::after {
          content: '';
@@ -141,6 +147,11 @@ span {
          position: relative;
          z-index: 100;
       }
+   }
+
+   .movedAboutText {
+      @extend .aboutText;
+      transform: translateX(0);
    }
 }
 
@@ -224,10 +235,6 @@ span {
 @media (max-width: 1600px) {
    .showcase {
       padding: 70px;
-
-      .left{
-         padding-left: 30px;
-      }
    }
 }
 
@@ -245,12 +252,7 @@ span {
             width: 450px;
             font-size: 1.7rem;
 
-            label {
-               margin-bottom: 15px;
-            }
-
             input {
-               height: 20px;
                font-size: 1.7rem;
             }
          }
@@ -288,12 +290,7 @@ span {
                font-size: 2rem;
             }
 
-            label {
-               margin-bottom: 15px;
-            }
-
             input {
-               height: 20px;
                font-size: 1.5rem;
                border-bottom: 1px solid #1f1f1f;
             }
@@ -338,12 +335,7 @@ span {
                font-size: 2rem;
             }
 
-            label {
-               margin-bottom: 15px;
-            }
-
             input {
-               height: 15px;
                font-size: 1.3rem;
                border-bottom: 1px solid #1f1f1f;
             }
@@ -449,6 +441,7 @@ span {
          } 
 
          .form {
+            width: 50%;
             margin: 80px auto 0;
             font-size: 1.7rem;
 
@@ -462,27 +455,35 @@ span {
          }
       }
 
+      .movedLeft {
+         transform: translateY(-300%);
+      }
+
       .btn {
          width: 130px;
          height: 40px;
       }
 
       .welcomeText {
-
+         transform: translateY(70%);
          .title {
-            font-size: 2rem;
+            font-size: 2.5rem;
          }
       }
 
-      .aboutText {
+      .movedWelcomeText {
+         transform: translateY(-100%);
+      }
 
+      .aboutText {
+         transform: translateY(300%);
          &::after {
             content: '';
             position: absolute;
             top: -180px;
             right: -62%;
             width: 220%;
-            height: 800px;
+            height: 1200px;
             background-color: #fff;
             opacity: 0.8;
             transform: skewY(-15deg);
@@ -493,6 +494,10 @@ span {
             margin-bottom: 40px;
          }
       }
+
+      .movedAboutText {
+         transform: translateY(-20%);
+      }
    }
 }
 
@@ -500,9 +505,7 @@ span {
    .showcase {
       padding-bottom: 30px;
       .left {
-         width: 100%;
          animation: slideFromTop 1s ease;
-         height: 500px;
          &::before {
          top: -40%;
          height: 160%;
@@ -510,15 +513,15 @@ span {
 
          .form {
             margin: 20px auto 0;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
 
             h2 {
-               font-size: 2.5rem;
-               margin-bottom: 10px;
+               font-size: 2rem;
+               margin-bottom: 20px;
             }
 
             input {
-               font-size: 1.5rem;
+               font-size: 1rem;
             }
          }
       }
@@ -526,6 +529,13 @@ span {
       .btn {
          width: 100px;
          height: 30px;
+      }
+
+      .welcomeText {
+
+         .title {
+            font-size: 1.5rem;
+         }
       }
 
       .aboutText {
@@ -593,17 +603,16 @@ span {
       .left {
 
          &::before {
-            top: -30%;
+            top: -20%;
          }
       }
 
       .welcomeText {
-         top: -11%;
+         transform: translateY(50%);
       }
 
       .aboutText {
          width: 350px;
-         top: -15%;
       
          h2 {
            font-size: 1.1rem;
@@ -614,16 +623,16 @@ span {
 
 @media (max-width: 400px) {
    .showcase {
-      padding: 20px;
+      padding: 10px;
 
       .left {
 
          &::before {
-            top: -20%;
+            top: -25%;
          }
 
          .form {            
-            margin: 30px auto 0;
+            margin: 15px auto 0;
             width: 250px;
 
             label {
@@ -633,7 +642,7 @@ span {
       }
 
       .welcomeText {
-         height: 40%;
+         transform: translateY(25%);
 
          .title {
 
@@ -645,6 +654,10 @@ span {
 
 @media (max-width: 360px) {
    .showcase {
+
+      .welcomeText {
+         transform: translateY(30%);
+      }
 
       .aboutText {
 
