--- a/src/components/AddMovie/addMovie.module.scss
+++ b/src/components/AddMovie/addMovie.module.scss
@@ -87,6 +87,8 @@
             height: 30px;
             margin-right: 40px;
             font-size: 1.2rem;
+            -webkit-appearance: none;
+
 
             &:focus{
                outline: 0;
