--- a/src/components/MovieList/movieList.module.scss
+++ b/src/components/MovieList/movieList.module.scss
@@ -21,7 +21,6 @@ a {
 
 .card {
    width: 830px;
-   height: 150px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
@@ -32,10 +31,24 @@ a {
 
    .header {
       display: flex;
-      
-      h2 {
-         margin-right: 15px;
+      justify-content: space-between;
+      margin-bottom: 20px;
+
+      .headerTitle {
+         display: flex;
+
+         h2 {
+            margin-right: 15px;
+         }
       }
+
+      .headerSuggested {
+         span {
+            font-weight: bold;
+         }
+      }
+      
+      
    }
 
    .info {
@@ -83,21 +96,24 @@ a {
 @media (max-width: 700px) {
    .card {
       width: 500px;
-      height: 180px;
+      .header {
+         flex-direction: column;
+         .headerTitle {
+            font-size: 0.8rem;
+         }
+      }
    }
 }
 
 @media (max-width: 550px) {
    .card {
       width: 400px;
-      height: 180px;
    }
 }
 
 @media (max-width: 450px) {
    .card {
       width: 350px;
-      height: 200px;
    }
 
    .loading {
@@ -110,7 +126,6 @@ a {
 @media (max-width: 380px) {
    .card {
       width: 300px;
-      height: 190px;
 
       .info {
          font-size: 0.95rem;
@@ -121,10 +136,5 @@ a {
 @media (max-width: 350px) {
    .card {
       width: 280px;
-      height: 190px;
-
-      .info {
-         font-size: 0.95rem;
-      }
    }
 }
